# windows-socket

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: log.hpp  socket.h
include/ScopeGuard/: ScopeGuard.hpp
include/std/: string.h
socket_util/: CMakeLists.txt  socket_util.h  socket_util.hpp
socket_util/src/: cstdint.ixx  cstdint_impl.hpp  macro.h  socket.util.base.ixx  socket_util.ixx  socket_util_base.hpp  socket_util_base_impl.hpp  socket_util_decl.h  socket_util_impl.hpp  socket_util_inc.h  socket_util_lib.cpp  socket_util_module.cpp  winapi.ixx  winapi_impl.hpp
src/: client.cpp  client_decl.hpp  client_header.cpp  client_impl.hpp  iocp_client.cpp  iocp_client3.cpp  iocp_server.cpp  iocp_server2.cpp  iocp_server3.cpp  server.cpp  socket_util.cpp  socket_util.h  socket_util.ixx  socket_util_decl.h  socket_util_impl.hpp
